Clicking on Prefs/(Input/Codecs) leads to SIGABRT

Compiled from af0b9612

...
[New Thread 0x7fffc0a68700 (LWP 4131895)]
[Thread 0x7fffc0a68700 (LWP 4131895) exited]
[New Thread 0x7fffc0a68700 (LWP 4131896)]
[Thread 0x7fffc0a68700 (LWP 4131896) exited]
[New Thread 0x7fffc0a68700 (LWP 4131897)]
[Thread 0x7fffc0a68700 (LWP 4131897) exited]
[New Thread 0x7fffa3fff700 (LWP 4131898)]
[New Thread 0x7fffa37fe700 (LWP 4131899)]
[New Thread 0x7fffa2ffd700 (LWP 4131900)]
[New Thread 0x7fffa27fc700 (LWP 4131901)]
vlc: config/core.c:107: config_GetPsz: Assertion `param != NULL' failed.

Thread 10 "vlc" received signal SIGABRT, Aborted.
[Switching to Thread 0x7fffdc93a700 (LWP 4131883)]
__GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
50	../sysdeps/unix/sysv/linux/raise.c: No such file or directory.

(gdb) backtrace 
#0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
#1  0x00007ffff7d8d859 in __GI_abort () at abort.c:79
#2  0x00007ffff7d8d729 in __assert_fail_base (
    fmt=0x7ffff7f23588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", 
    assertion=0x7ffff7d1b8f6 "param != NULL", 
    file=0x7ffff7d1b8e8 "config/core.c", line=107, function=<optimized out>)
    at assert.c:92
#3  0x00007ffff7d9ef06 in __GI___assert_fail (
    assertion=assertion@entry=0x7ffff7d1b8f6 "param != NULL", 
    file=file@entry=0x7ffff7d1b8e8 "config/core.c", line=line@entry=107, 
    function=function@entry=0x7ffff7d1ba38 <__PRETTY_FUNCTION__.5> "config_GetPsz") at assert.c:101
#4  0x00007ffff7c727d6 in config_GetPsz (
    name=name@entry=0x7ffff50d485c "cd-audio") at config/core.c:107
#5  0x00007ffff4f40e8c in SPrefsPanel::SPrefsPanel (this=0x7fffcc009660, 
    _p_intf=<optimized out>, _parent=<optimized out>, _number=<optimized out>)
    at gui/qt/dialogs/preferences/simple_preferences.cpp:676
#6  0x00007ffff4f2bf83 in PrefsDialog::changeSimplePanel (this=0x7fffd5953240, 
    number=4) at gui/qt/dialogs/preferences/preferences.cpp:230
#7  0x00007fffdf0e31d0 in QMetaObject::activate(QObject*, int, int, void**) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#8  0x00007ffff50849c2 in SPrefsCatList::currentItemChanged (
    this=<optimized out>, _t1=<optimized out>)
    at gui/qt/dialogs/preferences/simple_preferences.moc.cpp:139
#9  0x00007fffdf0e31d0 in QMetaObject::activate(QObject*, int, int, void**) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#10 0x00007fffdf0ee0b2 in QSignalMapper::mapped(int) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#11 0x00007fffdf0ef518 in QSignalMapper::map(QObject*) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#12 0x00007fffdf0e31d0 in QMetaObject::activate(QObject*, int, int, void**) ()
   from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#13 0x00007fffdfbc4806 in QAbstractButton::clicked(bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#14 0x00007fffdfbc4a2e in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#15 0x00007fffdfbc5e73 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#16 0x00007fffdfbc6035 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#17 0x00007fffdfcb95fe in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#18 0x00007fffdfb122b6 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#19 0x00007fffdfcb96a8 in QToolButton::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#20 0x00007fffdfacfa66 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#21 0x00007fffdfad9343 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#22 0x00007fffdf0b780a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#23 0x00007fffdfad8457 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#24 0x00007fffdfb2e35d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#25 0x00007fffdfb311ec in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#26 0x00007fffdfacfa66 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#27 0x00007fffdfad90f0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
#28 0x00007fffdf0b780a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#29 0x00007fffdf4a07d3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#30 0x00007fffdf4a210b in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#31 0x00007fffdf47c35b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
#32 0x00007fffdc70032e in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
#33 0x00007fffde66517d in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#34 0x00007fffde665400 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#35 0x00007fffde6654a3 in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
#36 0x00007fffdf10f435 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#37 0x00007fffdf0b63ab in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#38 0x00007fffdf0be116 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
#39 0x00007ffff4ea7817 in Thread (obj=0x55555560ec50) at gui/qt/qt.cpp:855
#40 0x00007ffff7f63609 in start_thread (arg=<optimized out>) at pthread_create.c:477
#41 0x00007ffff7e8a263 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
(gdb) backtrace full
#0  __GI_raise (sig=sig@entry=6) at ../sysdeps/unix/sysv/linux/raise.c:50
        set = {__val = {86023, 140737352063008, 140737415839744, 140736785989168, 140736785989168, 140736785989168, 140736785989168, 140736785989241, 140736785989268, 
            140736785989168, 140736785989268, 0, 0, 0, 0, 0}}
        pid = <optimized out>
        tid = <optimized out>
        ret = <optimized out>
#1  0x00007ffff7d8d859 in __GI_abort () at abort.c:79
        save_stage = 1
        act = {__sigaction_handler = {sa_handler = 0x7fffd622be30, sa_sigaction = 0x7fffd622be30}, sa_mask = {__val = {73, 4, 0, 0, 0, 140737353217029, 0, 21474836480, 
              140736894043408, 140733193388032, 140737353248784, 0, 7758358636283546880, 140737353217029, 140736420978688, 140737353233800}}, sa_flags = -137250584, 
          sa_restorer = 0x6b}
        sigs = {__val = {32, 0 <repeats 15 times>}}
#2  0x00007ffff7d8d729 in __assert_fail_base (fmt=0x7ffff7f23588 "%s%s%s:%u: %s%sAssertion `%s' failed.\n%n", assertion=0x7ffff7d1b8f6 "param != NULL", 
    file=0x7ffff7d1b8e8 "config/core.c", line=107, function=<optimized out>) at assert.c:92
        str = 0x7fffd622be30 ""
        total = 4096
#3  0x00007ffff7d9ef06 in __GI___assert_fail (assertion=assertion@entry=0x7ffff7d1b8f6 "param != NULL", file=file@entry=0x7ffff7d1b8e8 "config/core.c", 
    line=line@entry=107, function=function@entry=0x7ffff7d1ba38 <__PRETTY_FUNCTION__.5> "config_GetPsz") at assert.c:101
No locals.
#4  0x00007ffff7c727d6 in config_GetPsz (name=name@entry=0x7ffff50d485c "cd-audio") at config/core.c:107
        param = <optimized out>
        str = <optimized out>
        __PRETTY_FUNCTION__ = "config_GetPsz"
#5  0x00007ffff4f40e8c in SPrefsPanel::SPrefsPanel (this=0x7fffcc009660, _p_intf=<optimized out>, _parent=<optimized out>, _number=<optimized out>)
    at gui/qt/dialogs/preferences/simple_preferences.cpp:676
        psz_dvddiscpath = 0x7fffd622bdf0 "/dev/sr0"
        psz_vcddiscpath = 0x7fffd622be10 "/dev/sr0"
        psz_cddadiscpath = <optimized out>
        ui = {<Ui_SPrefsInputAndCodecs> = {verticalLayout = 0x7fffcc009590, groupBox_3 = 0x7fffd616a7f0, gridLayout = 0x7fffcc0082e0, x264Label = 0x7fffd61f3c30, 
            horizontalSpacer = 0x7fffd61f4e10, hwAccelLabel = 0x7fffd60e9e10, hwAccelModule = 0x7fffd61ca9a0, ppLabel = 0x7fffd610cfa0, line = 0x7fffd6214970, 
            presetBox = 0x7fffd6214ca0, profileBox = 0x7fffd62155f0, loopFilterBox = 0x7fffd6215ea0, filterLabel = 0x7fffd62167a0, x264profileLabel = 0x7fffd6216b80, 
            tuneBox = 0x7fffd6216f90, PostProcLevel = 0x7fffd6217870, levelBox = 0x7fffd6218b20, fastSeekBox = 0x7fffd6219990, groupBox = 0x7fffd6219fd0, 
            gridLayout1 = 0x7fffcc008560, DVDLabel = 0x7fffd621a590, DVDDeviceComboBox = 0x7fffd621aa40, groupBox_4 = 0x7fffd6220160, gridLayout_3 = 0x7fffd621ea30, 
            recordLabel = 0x7fffd62214e0, horizontalLayout_4 = 0x7fffd62219a0, recordPath = 0x7fffd6221b20, recordBrowse = 0x7fffd62228f0, aviLabel = 0x7fffd6222d60, 
            AviRepair = 0x7fffd6223310, line_2 = 0x7fffd6223f80, mkvPreloadBox = 0x7fffd6224320, groupBox_2 = 0x7fffd6224790, gridLayout_2 = 0x7fffd6219320, 
            httpProxyLabel = 0x7fffd6224ca0, proxy = 0x7fffd6225170, horizontalLayout = 0x7fffd6225860, live555TransportHTTPRadio = 0x7fffd62260a0, 
            live555TransportRTSP_TCPRadio = 0x7fffd6226400, live555TransportLabel = 0x7fffd6226c20, label_2 = 0x7fffd62270b0, cachingCombo = 0x7fffd6227580, 
            verticalSpacer = 0x7fffd62279e0}, <No data fields>}
        DVDDeviceComboBoxStringList = {<QList<QString>> = {<QListSpecialMethods<QString>> = {<No data fields>}, {p = {static shared_null = {ref = {atomic = {
                      _q_value = {<std::__atomic_base<int>> = {static _S_alignment = 4, _M_i = -1}, <No data fields>}}}, alloc = 0, begin = 0, end = 0, array = {0x0}}, 
                d = 0x7fffd61613e0}, d = 0x7fffd61613e0}}, <No data fields>}
        b_cache_equal = <optimized out>
        i_cache = <optimized out>
        control = 0x1
        panel_label = 0x7fffd61d5240
        labelFont = {static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7fffdf8b6700, data = 0x7fffdf8b6440, static_metacall = 0x0, relatedMetaObjects = 0x0, 
              extradata = 0x0}}, d = {d = 0x7fffd620c300}, resolve_mask = 3}
        scroller = <optimized out>
        p_config = <optimized out>
        panel_layout = 0x7fffcc009720
--Type <RET> for more, q to quit, c to continue without paging--c
        panel = 0x7fffd60faf60
        title_line = 0x7fffd616f9d0
        italicFont = {static staticMetaObject = {d = {superdata = 0x0, stringdata = 0x7fffdf8b6700, data = 0x7fffdf8b6440, static_metacall = 0x0, relatedMetaObjects = 0x0, extradata = 0x0}}, d = {d = 0x7fffd6093c40}, resolve_mask = 35}
        p_config = <optimized out>
        control = <optimized out>
        panel_layout = <optimized out>
        panel = <optimized out>
        panel_label = <optimized out>
        labelFont = <optimized out>
        title_line = <optimized out>
        italicFont = <optimized out>
        scroller = <optimized out>
        ui = <optimized out>
        i_screenCount = <optimized out>
        _container_ = <optimized out>
        screen = <optimized out>
        i_defaultScreen = <optimized out>
        ui = <optimized out>
        outputAudioLayout = <optimized out>
        i_max_volume = <optimized out>
        psz = <optimized out>
        b_enabled = <optimized out>
        alsaLabel = <optimized out>
        alsaDevice = <optimized out>
        widget = <optimized out>
        OSSLabel = <optimized out>
        OSShboxLayout = <optimized out>
        OSSDevice = <optimized out>
        OSSBrowse = <optimized out>
        ui = <optimized out>
        DVDDeviceComboBoxStringList = <optimized out>
        b_cache_equal = <optimized out>
        i_cache = <optimized out>
        psz_dvddiscpath = <optimized out>
        psz_vcddiscpath = <optimized out>
        psz_cddadiscpath = <optimized out>
        ui = <optimized out>
        psz_intf = <optimized out>
        intfScaleFloatFactor = <optimized out>
        updateIntfUserScaleFactorFromControls = <optimized out>
        hasMedialibrary = <optimized out>
        recentsModel = <optimized out>
        ui = <optimized out>
        gLayout = <optimized out>
        line = <optimized out>
        ui = <optimized out>
        foldersModel = <optimized out>
        bannedFoldersModel = <optimized out>
#6  0x00007ffff4f2bf83 in PrefsDialog::changeSimplePanel (this=0x7fffd5953240, number=4) at gui/qt/dialogs/preferences/preferences.cpp:230
        insert = <optimized out>
#7  0x00007fffdf0e31d0 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#8  0x00007ffff50849c2 in SPrefsCatList::currentItemChanged (this=<optimized out>, _t1=<optimized out>) at gui/qt/dialogs/preferences/simple_preferences.moc.cpp:139
        _a = {0x0, 0x7fffdc938c5c}
#9  0x00007fffdf0e31d0 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#10 0x00007fffdf0ee0b2 in QSignalMapper::mapped(int) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#11 0x00007fffdf0ef518 in QSignalMapper::map(QObject*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#12 0x00007fffdf0e31d0 in QMetaObject::activate(QObject*, int, int, void**) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#13 0x00007fffdfbc4806 in QAbstractButton::clicked(bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#14 0x00007fffdfbc4a2e in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#15 0x00007fffdfbc5e73 in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#16 0x00007fffdfbc6035 in QAbstractButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#17 0x00007fffdfcb95fe in QToolButton::mouseReleaseEvent(QMouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#18 0x00007fffdfb122b6 in QWidget::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#19 0x00007fffdfcb96a8 in QToolButton::event(QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#20 0x00007fffdfacfa66 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#21 0x00007fffdfad9343 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#22 0x00007fffdf0b780a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#23 0x00007fffdfad8457 in QApplicationPrivate::sendMouseEvent(QWidget*, QMouseEvent*, QWidget*, QWidget*, QWidget**, QPointer<QWidget>&, bool, bool) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#24 0x00007fffdfb2e35d in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#25 0x00007fffdfb311ec in ?? () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#26 0x00007fffdfacfa66 in QApplicationPrivate::notify_helper(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#27 0x00007fffdfad90f0 in QApplication::notify(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Widgets.so.5
No symbol table info available.
#28 0x00007fffdf0b780a in QCoreApplication::notifyInternal2(QObject*, QEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#29 0x00007fffdf4a07d3 in QGuiApplicationPrivate::processMouseEvent(QWindowSystemInterfacePrivate::MouseEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
No symbol table info available.
#30 0x00007fffdf4a210b in QGuiApplicationPrivate::processWindowSystemEvent(QWindowSystemInterfacePrivate::WindowSystemEvent*) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
No symbol table info available.
#31 0x00007fffdf47c35b in QWindowSystemInterface::sendWindowSystemEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Gui.so.5
No symbol table info available.
#32 0x00007fffdc70032e in ?? () from /usr/lib/x86_64-linux-gnu/libQt5XcbQpa.so.5
No symbol table info available.
#33 0x00007fffde66517d in g_main_context_dispatch () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#34 0x00007fffde665400 in ?? () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#35 0x00007fffde6654a3 in g_main_context_iteration () from /usr/lib/x86_64-linux-gnu/libglib-2.0.so.0
No symbol table info available.
#36 0x00007fffdf10f435 in QEventDispatcherGlib::processEvents(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#37 0x00007fffdf0b63ab in QEventLoop::exec(QFlags<QEventLoop::ProcessEventsFlag>) () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#38 0x00007fffdf0be116 in QCoreApplication::exec() () from /usr/lib/x86_64-linux-gnu/libQt5Core.so.5
No symbol table info available.
#39 0x00007ffff4ea7817 in Thread (obj=0x55555560ec50) at gui/qt/qt.cpp:855
        p_intf = 0x55555560ec50
        vlc_name = "vlc"
        argv = {0x7fffd4000b60 "vlc", 0x0, 0x0}
        argc = 1
        argvReleaser = std::unique_ptr<char *[]> = {get() = 0x7fffdc939dd0}
        compositor = <optimized out>
        compositorFactory = {m_intf = 0x55555560ec50, m_compositorName = {static null = {<No data fields>}, d = 0x7fffd4000ba0}, m_compositorIndex = 2}
        app = {<QApplication> = {<No data fields>}, static staticMetaObject = {d = {superdata = 0x7fffdffd0620 <QApplication::staticMetaObject>, stringdata = 0x7ffff510f3c0, data = 0x7ffff510f340, static_metacall = 0x7ffff50a6e60 <QVLCApp::qt_static_metacall(QObject*, QMetaObject::Call, int, void**)>, relatedMetaObjects = 0x0, extradata = 0x0}}, m_defaultStyle = {static null = {<No data fields>}, d = 0x7fffdc7b5700}}
        __func__ = "Thread"
        __PRETTY_FUNCTION__ = "void* Thread(void*)"
        s_style = {static null = {<No data fields>}, d = 0x7fffd4308210}
#40 0x00007ffff7f63609 in start_thread (arg=<optimized out>) at pthread_create.c:477
        ret = <optimized out>
        pd = <optimized out>
        unwind_buf = {cancel_jmp_buf = {{jmp_buf = {140736894052096, -8627143766258909953, 140737488345038, 140737488345039, 140737488345168, 140736894050048, 8627070954740743423, 8627161411804167423}, mask_was_saved = 0}}, priv = {pad = {0x0, 0x0, 0x0, 0x0}, data = {prev = 0x0, cleanup = 0x0, canceltype = 0}}}
        not_first_call = 0
#41 0x00007ffff7e8a263 in clone () at ../sysdeps/unix/sysv/linux/x86_64/clone.S:95
No locals.
Edited by badfiles