qt: check cdda module exists before handling cdda specific option

Fixes #26492.